@@ -2,6 +2,10 @@
  - the ::Response::PackageResult objects in a
    ::Response::ShipmentAccept now link back to the ::Package objects
    they relate to
+ - ::Package now has separate linear_unit and weight_unit attributes;
+   measurement_system is now a shortcut in the constructor
+   parameters. Note that using kilograms/inches or pounds/centimetres
+   will currently result in an error message from UPS
 
 1.0.4     2014-09-02 09:54:21+01:00 Europe/London
  - bump requirement of Types::Standard to get fix for RT #98362; it
